feat: gets word withmost vowels

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <td><em>no data available</em></td>
             </tr>
             <tr>
-                <td>greatest number of vowels in a word:</td>
+                <td>greatest number of vowels:</td>
                 <td><em>no data available</em></td>
             </tr>
             <tr>
